# invoice-pdf-splitter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  generate-icons-advanced.cjs  index.html  package-lock.json  package.json
src/: App.tsx  styles.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  invoice.rs  lib.rs  main.rs  pdf_utils.rs
src/components/: DropZone.tsx  LogPanel.tsx  PageClassificationPanel.tsx  PreviewPanel.tsx  SettingsPanel.tsx
