[package]
name = "invoice-pdf-splitter"
version = "1.0.0"
description = "发票 PDF 拆分命名工具"
authors = ["you"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lopdf = { version = "0.32", features = ["nom_parser"] }
regex = "1.10"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
encoding = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
